# nngcpp

./: .gitignore  .gitmodules  CMakeLists.nng.txt  CMakeLists.txt  README.md
swig/: CMakeLists.txt
swig/cpp/: CMakeLists.txt
swig/cpp/src/: CMakeLists.txt  nngcpp.h  nngcpp_integration.h  nngcpp_messaging.hpp
swig/cpp/src/algorithms/: string_algo.hpp
swig/cpp/src/core/: ICanClose.hpp  ICanDial.cpp  ICanDial.h  ICanDial.hpp  ICanListen.cpp  ICanListen.h  ICanListen.hpp  ICanShutdown.hpp  IEquatable.hpp  IProtocol.cpp  IProtocol.h  IReceiver.cpp  IReceiver.h  ISender.cpp  ISender.h  address.cpp  address.h  async.h  can_close.hpp  core.h  device.cpp  device.h  dialer.cpp  dialer.h  endpoint.cpp  endpoint.h  enums.cpp  enums.h  exceptions.hpp  having_one.hpp  invocation.hpp  listener.cpp  listener.h  messenger.cpp  messenger.h  nng_exception.cpp  nng_exception.h  options.cpp  options.h  receiver.cpp  (+8 more)
swig/cpp/src/core/async/: async_writer.cpp  async_writer.h  basic_async_service.cpp  basic_async_service.h
swig/cpp/src/core/exceptions/: invalid_operation.cpp  invalid_operation.h  nng_exception.cpp  nng_exception.h  not_implemented.cpp  not_implemented.h  system_error.cpp  system_error.h  transport_error.cpp  transport_error.h
swig/cpp/src/messaging/: basic_binary_message.hpp  binary_message.cpp  binary_message.h  binary_message_body.cpp  binary_message_body.h  binary_message_header.cpp  binary_message_header.h  message_base.cpp  message_base.h  message_part.cpp  message_part.h  message_pipe.cpp  message_pipe.h  messaging.h  messaging_api_base.hpp  messaging_gymnastics.cpp  messaging_gymnastics.h  messaging_utils.cpp  messaging_utils.h
swig/cpp/src/options/: IHaveOptions.hpp  ISupportOptions.hpp  names.cpp  names.h  options.h  reader.cpp  reader.h  reader_writer.cpp  reader_writer.h  writer.cpp  writer.h
swig/cpp/src/protocol/: protocol.h
swig/cpp/src/protocol/bus/: bus.cpp  bus.h
swig/cpp/src/protocol/pair/: pair_v0.cpp  pair_v0.h  pair_v1.cpp  pair_v1.h
swig/cpp/src/protocol/pipeline/: pull.cpp  pull.h  push.cpp  push.h
swig/cpp/src/protocol/pubsub/: pub.cpp  pub.h  sub.cpp  sub.h
swig/cpp/src/protocol/reqrep/: rep.cpp  rep.h  req.cpp  req.h
swig/cpp/src/protocol/survey/: respond.cpp  respond.h  survey.cpp  survey.h
swig/cpp/src/transport/: address.cpp  address.h  sockaddr.h
swig/cpp/src/transport/views/: IFamilyView.cpp  IFamilyView.h  inet6_family_view.cpp  inet6_family_view.h  inet_family_view.cpp  inet_family_view.h  inproc_family_view.cpp  inproc_family_view.h  ipc_family_view.cpp  ipc_family_view.h  unspec_family_view.cpp  unspec_family_view.h  views.h  zt_family_view.cpp  zt_family_view.h
swig/cpp/tests/: CMakeLists.txt  timed_section_impl.hpp
swig/cpp/tests/catch/: catch_exception_matcher_base.hpp  catch_exception_translations.hpp  catch_macros.hpp  catch_matchers_regex.hpp  catch_nng_exception_matcher.hpp  catch_tags.cpp  catch_tags.h  timed_section_impl.hpp
swig/cpp/tests/core/: address.cpp  device.cpp  errors.cpp  pollfd.cpp  reconnect.cpp  scalability.cpp  sock.cpp
swig/cpp/tests/core/async/: async.cpp
swig/cpp/tests/helpers/: basic_fixture.cpp  basic_fixture.h  chrono.hpp  constants.cpp  constants.h  protocol_boilerplate.cpp  protocol_boilerplate.hpp
swig/cpp/tests/messaging/: binary_message.cpp  binary_message_body.cpp  binary_message_header.cpp  binary_message_part_fixtures.hpp  message_pipe.cpp  messaging_gymnastics.cpp  messaging_gymnastics.h
swig/cpp/tests/protocol/: bus.cpp  pair.cpp  pipeline.cpp  pubsub.cpp  reqrep.cpp  survey.cpp
swig/cpp/tests/transport/: extended_transport.cpp  extended_transport.h  inproc.cpp  ipc.cpp  tcp.cpp  tcp6.cpp  transport.cpp  transport.h  udp.cpp
swig/csharp/: CMakeLists.txt
swig/csharp/src/: Common.i  _Index.i
swig/csharp/src/Core/: Dialer.i  EndPoint.i  Enums.i  ICanClose.cs  ICanClose.i  IClearable.cs  IDialer.cs  IEndPoint.cs  IHaveOne.cs  IHaveOne.i  IListener.cs  Listener.i  Types.i  _Index.i
swig/csharp/src/Messaging/: BasicMessage.i  BodyMessagePart.i  HeaderMessagePart.i  ICanAppend.cs  ICanGet.cs  ICanPrepend.cs  ICanTrim.cs  IMessagePart.cs  Message.i  MessageBase.i  MessagePart.i  _Index.i
swig/csharp/src/Options/: IHaveOptionReader.cs  IHaveOptionReaderWriter.cs  IHaveOptions.cs  IOptionReader.cs  IOptionReaderWriter.cs  IOptionWriter.cs  IOptions.cs  ISupportOptions.i  Names.i  Reader.i  ReaderWriter.i  Writer.i  _Index.i
swig/csharp/src/Transport/: ISocketAddress.cs  SocketAddress.Partial.cs  SocketAddress.i  _Index.i
swig/csharp/src/Transport/Views/: IAddressFamilyView.cs  ICanViewPort.cs  IFamilyView.i  IIPv4FamilyView.cs  IIPv6FamilyView.cs  IInProcessFamilyView.cs  IInterProcessFamilyView.cs  IUnspecifiedFamilyView.cs  IZeroTierFamilyView.cs  Inet6FamilyView.i  InetFamilyView.i  InprocFamilyView.i  IpcFamilyView.i  UnspecFamilyView.i  ZeroTierFamilyView.i  _Index.i
